# solidrs

./: .gitignore  Cargo.toml  README.md  test.scad  variables.scad
.github/workflows/: rust.yml
examples/: car.rs  simple.rs  variables.rs
solidrs-macros/: Cargo.toml
solidrs-macros/src/: lib.rs
src/: boolean.rs  calc.rs  config.rs  element.rs  lib.rs  modify.rs  scad.rs  shapes2d.rs  shapes3d.rs  tests.rs  transform.rs  var.rs
test_output/: car.scad  simple.scad  variables.scad
