[package]
name = "solidrs"
version = "0.3.1"
edition = "2021"
authors = ["MnlPhlp <online@philipp-manuel.de>"]
license = "MIT OR Apache-2.0"
description = "Rust library to generate openScad models. Inspired by SolidPython."
homepage = "https://github.com/MnlPhlp/solidrs"
repository = "https://github.com/MnlPhlp/solidrs"
keywords = ["solidpython", "openscad", "cad", "3d", "modeling"]
categories = ["rendering"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
