[package]
name = "solidrs-macros"
version = "0.3.1"
edition = "2021"
authors = ["MnlPhlp <online@philipp-manuel.de>"]
license = "MIT OR Apache-2.0"
description = "macros for the solidrs crate"
homepage = "https://github.com/MnlPhlp/solidrs"
repository = "https://github.com/MnlPhlp/solidrs"
readme = "README.md"

[lib]
proc_macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
